# BBU-Computer-Science

./: README.md  pre-commit  real_readme.md
Semester2/Data Structures and Algorithms/homeworks/lab5/: CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h  a.out
Semester2/OOP/a3-4-georgerapeanu/: CMakeLists.txt  README.md
Semester2/OOP/a3-4-georgerapeanu/app/: main.c
Semester2/OOP/a3-4-georgerapeanu/include/domain/: operation.h  undo_redo_operation.h
Semester2/OOP/a3-4-georgerapeanu/include/repository/: repository.h
Semester2/OOP/a3-4-georgerapeanu/latex/: annotated.tex  app_2main_8c.tex  app_2main_8c__incl.md5  country_8c.tex  country_8h__dep__incl.md5  country__controller_8c.tex  country__controller_8c__incl.md5  country__controller__tests_8h.tex  country__controller__tests_8h__dep__incl.md5  country__controller__tests_8h__incl.md5  country__tests_8c__incl.md5  domain__tests_8h.tex  errors_8c.tex  errors_8c__incl.md5  errors_8h.tex  errors_8h__dep__incl.md5  errors__tests_8c.tex  files.tex  md_README.tex  operation_8h.tex  operation__tests_8h.tex  refman.aux  refman.ind  refman.tex  refman.toc  repository__tests_8h.tex  structcountry__controller__t.tex  structoperation__t.tex  structrepository__t.tex  structui__t.tex  structundo__redo__controller__t.tex  structundo__redo__controller__t__coll__graph.md5  structundo__redo__operation__t.tex  structundo__redo__repository__t.tex  structundo__redo__repository__t__coll__graph.md5  structvector__t.tex  ui_8h__dep__incl.md5  undo__redo__operation_8c__incl.md5  undo__redo__operation_8h__incl.md5  undo__redo__operation__tests_8h.tex  (+8 more)
Semester2/OOP/a3-4-georgerapeanu/src/controller/: undo_redo_controller.c
Semester2/OOP/a3-4-georgerapeanu/src/domain/: country.c  errors.c  undo_redo_operation.c  vector.c
Semester2/OOP/a3-4-georgerapeanu/src/repository/: repository.c
Semester2/OOP/a3-4-georgerapeanu/src/ui/: ui.c
Semester2/OOP/a5-6-georgerapeanu/: CMakeLists.txt  README.md
Semester2/OOP/a5-6-georgerapeanu/include/controller/: MovieController.h
Semester2/OOP/a5-6-georgerapeanu/include/domain/: Exceptions.h  Movie.h
Semester2/OOP/a5-6-georgerapeanu/src/domain/: DynamicVector.cpp
Semester2/OOP/a5-6-georgerapeanu/src/ui/: UI.cpp
Semester2/OOP/a5-6-georgerapeanu/tests/domain/: MovieTests.cpp
Semester2/OOP/a5-6-georgerapeanu/tests/repository/: RepositoryTests.cpp
Semester2/OOP/a8-9-georgerapeanu/: CMakeLists.txt  README.md  repository.txt
Semester2/OOP/a8-9-georgerapeanu/app/: main.cpp
Semester2/OOP/a8-9-georgerapeanu/latex/: HTMLWatchlistTests_8cpp__incl.md5  MemoryRepositoryTests_8cpp.tex  MemoryWatchlistTests_8cpp.tex  MemoryWatchlist_8h__incl.md5  UI_8h__dep__incl.md5  annotated.tex  classAbstractRepository__inherit__graph.md5  classCSVWatchlistTests__inherit__graph.md5  classFileRepositoryTests.tex  classFileRepositoryTests__coll__graph.md5  classFileRepositoryTests__inherit__graph.md5  classMemoryWatchlist.tex  classMemoryWatchlist__coll__graph.md5  classMovieControllerException.tex  classRepositoryException.tex
Semester2/OOP/t3-georgerapeanu/: CMakeLists.txt  Documents.txt  main.cpp
Semester2/OOP/t3-georgerapeanu/controller/: Controller.h
Semester2/OOP/t3-georgerapeanu/domain/: Document.cpp  Document.h  Exceptions.h
Semester2/OOP/t3-georgerapeanu/repository/: FileRepository.cpp
Semester2/OOP/t3-georgerapeanu/ui/: .GUI.h.swp
Semester2/Object Oriented Programming/a11-12-georgerapeanu/: CMakeLists.txt  README.md  watchlist.csv
Semester2/Object Oriented Programming/a11-12-georgerapeanu/app/: main.cpp
Semester2/Object Oriented Programming/a11-12-georgerapeanu/latex/: AbstractRepository_8h__incl.md5  FileRepository_8cpp__incl.md5  FileRepository_8h.tex  HTMLWatchlist_8h.tex  MemoryRepositoryTests_8cpp__incl.md5  MemoryWatchlist_8cpp.tex  MemoryWatchlist_8cpp__incl.md5  MovieValidator_8cpp.tex  MovieValidator_8cpp__incl.md5  MovieValidator_8h__dep__incl.md5  Movie_8h__dep__incl.md5  UI_8cpp.tex  UI_8h.tex  UI_8h__incl.md5  classHTMLWatchlistTests.tex  classHTMLWatchlistTests__coll__graph.md5  classMovieControllerTests.tex  refman.idx  refman.ind  refman.tex
Semester2/Object Oriented Programming/a14-georgerapeanu/: CMakeLists.txt
Semester2/Object Oriented Programming/a14-georgerapeanu/latex/: AbstractRepository_8h.tex  AbstractWatchlist_8h.tex  AbstractWatchlist_8h__dep__incl.md5  CSVWatchlistTests_8cpp.tex  MovieController_8h__dep__incl.md5  MovieController_8h__incl.md5  MovieValidator_8h.tex  Movie_8h.tex  Movie_8h__incl.md5  classAbstractRepository.tex  classAppException__coll__graph.md5  classAppException__inherit__graph.md5  classCSVWatchlistTests.tex  classControllerException__inherit__graph.md5  classFileRepository__inherit__graph.md5  classHTMLWatchlist__inherit__graph.md5  classMemoryRepositoryTests__inherit__graph.md5  classMemoryWatchlistTests__inherit__graph.md5  classMovie.tex  classMovieController.tex  classMovieControllerTests__coll__graph.md5  files.tex  md_README.tex
Semester2/Object Oriented Programming/a14-georgerapeanu/tests/: CMakeLists.txt
Semester2/Object Oriented Programming/a5-6-georgerapeanu/tests/: CMakeLists.txt
Semester2/Object Oriented Programming/a8-9-georgerapeanu/tests/: CMakeLists.txt
Semester2/Object Oriented Programming/e916-georgerapeanu-1/: CMakeLists.txt
Semester2/Object Oriented Programming/t1/: CMakeLists.txt
Semester2/Object Oriented Programming/t1/controller/: SchoolController.cpp  SchoolController.h
Semester2/Object Oriented Programming/t1/domain/: AppException.cpp
Semester2/Object Oriented Programming/t1/tests/: AppTests.h
Semester2/Object Oriented Programming/t1/ui/: UI.cpp  UI.h
Semester2/Object Oriented Programming/t1/utils/: utils.cpp
Semester2/Object Oriented Programming/t2-georgerapeanu-1/: CMakeLists.txt  main.cpp
Semester2/Object Oriented Programming/t2-georgerapeanu-1/domain/: ElectricEngine.h  Engine.cpp  Engine.h
Semester2/Object Oriented Programming/t2-georgerapeanu-1/service/: Service.cpp  Service.h
Semester2/SDA/homeworks/lab4/: CMakeLists.txt
csa/lab1/: tester  (+1 more)
(+2328 files in other folders)
